tests/NormalTests/paczka2/big_fuzzy/89610567.err
Error in line 11: FSe7JXso A473 9,0
Error in line 22: Zguj8gVZ49 S198 54,9
Error in line 23: S198 S628 7,1
Error in line 28: zPgg S198 88,0
Error in line 31: 6ibvtC A828 87,2
Error in line 29: S198 A828 61,9
Error in line 39: FSe7JXso S628 85,7
Error in line 37: S198 S628 98,0
Error in line 25: Zguj8gVZ49 A828 46,6
Error in line 44: Zguj8gVZ49 S628 48,6
Error in line 48: Q6Ks6iyV A828 36,0
Error in line 56: FSe7JXso A828 289,9
Error in line 57: FSe7JXso S628 22,5
Error in line 60: FSe7JXso A828 84,0
Error in line 62: FSe7JXso S198 17,9
Error in line 71: 6ibvtC S628 41,1
Error in line 83: S198 A828 49,8
Error in line 93: FSe7JXso A828 12,1
Error in line 104: FSe7JXso S198 29,0
Error in line 133: Zguj8gVZ49 S198 47,8
Error in line 137: FSe7JXso S628 92,0
Error in line 132: xZi4 A473 66,6
Error in line 139: Q6Ks6iyV S628 428,4
Error in line 142: xZi4 A828 35,3
Error in line 151: S198 S628 43,4
Error in line 158: zPgg A828 31,5
Error in line 160: S198 A828 74,9
Error in line 156: 6ibvtC S628 98,3
Error in line 161: zPgg A473 81,5
Error in line 177: 6ibvtC A473 51,6
Error in line 187: 6ibvtC A473 51,1
Error in line 188: 6ibvtC S198 2,0
Error in line 194: zPgg A8z8 18,7
Error in line 198: Q6Ks6iyV S198 98,0
Error in line 196: zPgg A828 31,6
Error in line 208: xZi4 A828 6,1
Error in line 234: zPgg A828 4,82
Error in line 231: Zguj8gVZ49 S198 90,7
Error in line 235: Zguj8gVZ49 A473 50,6
